# github-app-proxy

./: Cargo.toml  Dockerfile  README.md
.github/: CODEOWNERS
.github/workflows/: docker-publish.yml
kubernetes/: networkpolicy.yaml
src/: config.rs  github.rs  main.rs  proxy.rs
